--- a/main_prog.html
+++ b/main_prog.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="utf-8">
 <link rel="shortcut icon" href="main_prog.ico">
-<title>Untitled Document</title>
+<link rel="stylesheet" type="text/css" href="main_prog.css">
+<title>-> no title jet <-</title>
 </head>
 
 <body>
-firs test.
+<textarea id="text_ar_1" spellcheck="false"></textarea>
 </body>
+
+<script src="main_prog.js" type="text/javascript"></script>
 </html>
