--- a/main_prog.html
+++ b/main_prog.html
@@ -7,7 +7,7 @@
 <title>-> no title jet <-</title>
 </head>
 
-<body>
+<body onbeforeunload="on_close()">
 <div id="text_sh_1"></div>
 <textarea id="text_ar_1" spellcheck="false"></textarea>
 </body>
