--- a/main_prog.html
+++ b/main_prog.html
@@ -8,6 +8,7 @@
 </head>
 
 <body onbeforeunload="on_close()">
+<div id="option_bar_top"><div id="option_bar_top_text"><butt class="button">Bustand   </butt><butt class="button">Bewerken   </butt></div></div>
 <div id="text_sh_1"></div>
 <textarea id="text_ar_1" spellcheck="false"></textarea>
 </body>
