--- a/chat.html
+++ b/chat.html
@@ -1,6 +1,6 @@
 Enter Chat and press enter
 
-<div><textarea id=input placeholder=you-chat-here ></textarea></div>
+<div><input id=input placeholder=you-chat-here /></div>
 
  
 
