--- a/weer.html
+++ b/weer.html
@@ -12,6 +12,7 @@ if (window.XMLHttpRequest) {
 xmlhttp.onreadystatechange = function() {
   if (xmlhttp.readyState==4 && xmlhttp.status==200) {
     document.getElementById("output").innerHTML = xmlhttp.responseText;
+    alert("redy");
   }
 }
 xmlhttp.open("GET","http://freemeteo.com/services/ModulesCode/feed2.asp?cn=973537_20140227_153413",true);
